Fix broken styling on iOS

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,22 @@ body {
   overflow: hidden;
 }
 
+/* Safari iOS specific styles */
+@supports (-webkit-touch-callout: none) {
+  @media screen and (max-width: 768px) {
+    body {
+      width: 100%;
+      height: 750px;
+    }
+
+    #avatarsTab .content-area,
+    #wardrobeTab .content-area,
+    #tryonsTab .content-area {
+      max-height: 500px !important;
+    }
+  }
+}
+
 .container {
   width: 100%;
   height: 100%;
